--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "15.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
