--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     },
     "plugins": [{ "name": "next" }]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/country-profiles/[slug]/page.tsxx", "app/components/country-profile.js", "app/country-profiles/page.tsx", "app/country-profiles/[country]/page.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/country-profiles/[slug]/page.tsxx", "app/components/country-profile.js", "app/country-profiles/page.tsx", "app/country-profiles/[country]/page.js", "app/components/leaderboard.tsx"],
   "exclude": ["node_modules"]
 }
