--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/hooks": "7.14.1",
     "@next/bundle-analyzer": "^14.2.4",
     "@tabler/icons-react": "^3.6.0",
+    "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "next": "15.0.1",
     "react": "18.3.1",
